Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Streak_Config__mdt/Streak_Config__mdt.object-meta.xml
<CustomObject>
    <label>Streak Config</label>
    <pluralLabel>Streak Configs</pluralLabel>
</CustomObject>