Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Streak_Config__mdt/fields/Freeze_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Allowed__c</fullName>
    <label>Freeze Allowed</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>