Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Streak_Config__mdt/fields/Max_Freeze_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Freeze_Days__c</fullName>
    <label>Max Freeze Days</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>2</defaultValue>
</CustomField>