Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Streak_Config__mdt/fields/Milestone_Days__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Days__c</fullName>
    <label>Milestone Days</label>
    <type>Text</type>
    <length>255</length>
</CustomField>