Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Streak_Config__mdt/fields/Min_Actions_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Min_Actions_Per_Day__c</fullName>
    <label>Min Actions Per Day</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
</CustomField>