Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Streak_Config__mdt/fields/Qualifying_Action__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Action__c</fullName>
    <label>Qualifying Action</label>
    <type>Text</type>
    <length>255</length>
</CustomField>