Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Streak_Config__mdt/fields/Streak_Bonus_XP__c.field-meta.xml
<CustomField>
    <fullName>Streak_Bonus_XP__c</fullName>
    <label>Streak Bonus XP</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>